--- a/Exploratory data analysis.ipynb
+++ b/Exploratory data analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {
     "executionInfo": {
      "elapsed": 2109,
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {
     "executionInfo": {
      "elapsed": 20792,
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {
     "executionInfo": {
      "elapsed": 8357,
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -229,7 +229,7 @@
        "max    4.261870e+07  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -267,7 +267,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -392,7 +392,7 @@
        "4  2015-01-02 09:34:00  14.820  14.847  14.810  14.811  415800     "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -481,7 +481,7 @@
        "Name: Date, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {
     "executionInfo": {
      "elapsed": 540,
@@ -537,13 +537,19 @@
     "        \"std_vol\": std_vol,\n",
     "        \"news\": news,\n",
     "    })\n",
-    "    result[\"is_up\"] = (result[\"close\"].diff().shift(-1) > 0).astype(int)\n",
+    "    result.reset_index(inplace = True)\n",
+    "    result[\"Date\"] = pd.to_datetime(result['Date'])\n",
+    "    result[\"month\"] = result[\"Date\"].dt.month.astype('category')\n",
+    "    result[\"day\"] = result[\"Date\"].dt.day.astype('category')\n",
+    "    result[\"is_up\"] = (result[\"close\"].diff(-1) < 0).astype(int)\n",
+    "    \n",
+    "    \n",
     "    return result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {
     "executionInfo": {
      "elapsed": 2,
@@ -565,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {
     "id": "vm4vs6CjDtMM"
    },
@@ -577,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {
     "id": "hPTKVeJ3DtII"
    },
@@ -603,6 +609,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Date</th>\n",
        "      <th>close</th>\n",
        "      <th>open</th>\n",
        "      <th>lowest</th>\n",
@@ -611,24 +618,15 @@
        "      <th>mean_vol</th>\n",
        "      <th>std_vol</th>\n",
        "      <th>news</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
        "      <th>is_up</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2015-01-02</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-01-02</td>\n",
        "      <td>24.490</td>\n",
        "      <td>24.925</td>\n",
        "      <td>24.026</td>\n",
@@ -637,10 +635,13 @@
        "      <td>482517.917949</td>\n",
        "      <td>453958.983288</td>\n",
        "      <td>[\"Is Xiaomi's first laptop a MacBook Air knock...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-01-05</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-01-05</td>\n",
        "      <td>23.807</td>\n",
        "      <td>24.192</td>\n",
        "      <td>23.592</td>\n",
@@ -649,10 +650,13 @@
        "      <td>514324.338462</td>\n",
        "      <td>426711.446836</td>\n",
        "      <td>[\"Is Xiaomi's first laptop a MacBook Air knock...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-01-06</th>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-01-06</td>\n",
        "      <td>23.802</td>\n",
        "      <td>23.842</td>\n",
        "      <td>23.417</td>\n",
@@ -662,9 +666,12 @@
        "      <td>452106.984355</td>\n",
        "      <td>[\"Is Xiaomi's first laptop a MacBook Air knock...</td>\n",
        "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-01-07</th>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-01-07</td>\n",
        "      <td>24.143</td>\n",
        "      <td>24.017</td>\n",
        "      <td>23.879</td>\n",
@@ -674,9 +681,12 @@
        "      <td>315345.332594</td>\n",
        "      <td>Apple aims at bendable devices\\nA newly issued...</td>\n",
        "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2015-01-08</th>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-01-08</td>\n",
        "      <td>25.066</td>\n",
        "      <td>24.391</td>\n",
        "      <td>24.328</td>\n",
@@ -686,38 +696,37 @@
        "      <td>344928.788130</td>\n",
        "      <td>Xiaomi's buying spree gives Apple, Samsung mor...</td>\n",
        "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             close    open  lowest  highest  total_vol       mean_vol  \\\n",
-       "Date                                                                    \n",
-       "2015-01-02  24.490  24.925  24.026   24.992  188181988  482517.917949   \n",
-       "2015-01-05  23.807  24.192  23.592   24.366  200586492  514324.338462   \n",
-       "2015-01-06  23.802  23.842  23.417   24.092  237766160  609656.820513   \n",
-       "2015-01-07  24.143  24.017  23.879   24.265  137809632  353358.030769   \n",
-       "2015-01-08  25.066  24.391  24.328   25.151  201020076  515436.092308   \n",
+       "        Date   close    open  lowest  highest  total_vol       mean_vol  \\\n",
+       "0 2015-01-02  24.490  24.925  24.026   24.992  188181988  482517.917949   \n",
+       "1 2015-01-05  23.807  24.192  23.592   24.366  200586492  514324.338462   \n",
+       "2 2015-01-06  23.802  23.842  23.417   24.092  237766160  609656.820513   \n",
+       "3 2015-01-07  24.143  24.017  23.879   24.265  137809632  353358.030769   \n",
+       "4 2015-01-08  25.066  24.391  24.328   25.151  201020076  515436.092308   \n",
        "\n",
-       "                  std_vol                                               news  \\\n",
-       "Date                                                                           \n",
-       "2015-01-02  453958.983288  [\"Is Xiaomi's first laptop a MacBook Air knock...   \n",
-       "2015-01-05  426711.446836  [\"Is Xiaomi's first laptop a MacBook Air knock...   \n",
-       "2015-01-06  452106.984355  [\"Is Xiaomi's first laptop a MacBook Air knock...   \n",
-       "2015-01-07  315345.332594  Apple aims at bendable devices\\nA newly issued...   \n",
-       "2015-01-08  344928.788130  Xiaomi's buying spree gives Apple, Samsung mor...   \n",
+       "         std_vol                                               news month day  \\\n",
+       "0  453958.983288  [\"Is Xiaomi's first laptop a MacBook Air knock...     1   2   \n",
+       "1  426711.446836  [\"Is Xiaomi's first laptop a MacBook Air knock...     1   5   \n",
+       "2  452106.984355  [\"Is Xiaomi's first laptop a MacBook Air knock...     1   6   \n",
+       "3  315345.332594  Apple aims at bendable devices\\nA newly issued...     1   7   \n",
+       "4  344928.788130  Xiaomi's buying spree gives Apple, Samsung mor...     1   8   \n",
        "\n",
-       "            is_up  \n",
-       "Date               \n",
-       "2015-01-02      0  \n",
-       "2015-01-05      0  \n",
-       "2015-01-06      1  \n",
-       "2015-01-07      1  \n",
-       "2015-01-08      1  "
+       "   is_up  \n",
+       "0      0  \n",
+       "1      0  \n",
+       "2      1  \n",
+       "3      1  \n",
+       "4      1  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,12 +737,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "is_up\n",
+       "1    1170\n",
+       "0    1053\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = data_apple['is_up'].value_counts()\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52.63157894736842\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseline = temp[1] / np.sum(temp)\n",
+    "print(baseline * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51.956815114709855\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = data_tesla['is_up'].value_counts()\n",
+    "baseline = temp[1] / np.sum(temp)\n",
+    "print(baseline * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data_apple[\"is_up\"].value_counts"
-   ]
+   "source": []
   }
  ],
  "metadata": {
