--- a/ApplyML.ipynb
+++ b/ApplyML.ipynb
@@ -43,7 +43,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns  # for nicer plots"
+    "import seaborn as sns  # for nicer plots\n",
+    "\n"
    ]
   },
   {
